--- a/www/style.css
+++ b/www/style.css
@@ -233,7 +233,7 @@ form select{
 .car-label,.car-distance{
   display: inline-block;
 }
-.fuel-dis{ 
+.fuel-dist{ 
   font-size: 13px;
   line-height: 19px;
   margin-left: 0.25rem;
