--- a/www/style.css
+++ b/www/style.css
@@ -3,10 +3,11 @@ h2,h2,h3,body,ul,li{
   padding: 0;
 }
 body{
-  font-family: Verdana, Geneva, sans-serif;
-  background: #ECECEF;
+  font-family: 'Poppins', Verdana, Geneva, sans-serif;
+  background: #B0B9C8;
   width: 100%;
   height: 100%;
+  color: #030E1B;
   max-width: 700px;
   margin: auto;
   font-size: 15px;
@@ -14,7 +15,7 @@ body{
   text-align: center;
 }
 a,a:visited{
-  color: blue;
+  color: #205493;
   cursor: pointer;
   text-decoration: none;
 }
@@ -40,10 +41,10 @@ label,small{
   font-size: 0.8rem;
 }
 a:active, .btn:active, a.btn:active{
-  background: blue;
+  background: #205493;
   color: white !important;
   outline: 0;
-  box-shadow: 0 0 0 5px blue;
+  box-shadow: 0 0 0 5px #205493;
   z-index: 1000;
   position: relative;
 }
@@ -78,7 +79,7 @@ th,td{
 }
 form input{
   display: block;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: 'Poppins', Verdana, Geneva, sans-serif;
   width: 100%;
   font-size: 18px;
   margin: 1rem  0;
@@ -120,8 +121,8 @@ form select{
   padding: 0.25rem 0;
   text-indent: 0;
 }
-.waive-green{
-  color: #25c155;
+.waive-green,.reef-blue{
+  color: rgb(0,30,97);
 }
 .map{
   display: block;
@@ -172,15 +173,15 @@ form select{
   padding-bottom: 1rem;
 }
 .btn{
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: 'Poppins', Verdana, Geneva, sans-serif;
   text-align: center;
   display: inline-block;
   font-size: 16px;
   border: 0;
   padding: 0.5rem;
-  box-shadow: 0 0 0 1px blue;
+  box-shadow: 0 0 0 1px #205493;
   background: rgba(0,0,255,0.03);
-  color: blue;
+  color: #205493;
 }
 .btn.cta{
   font-size: 18px;
@@ -365,7 +366,7 @@ a.danger:active{
 }
 .box .title,.prompt h1,.prompt .title{
   color: #002;
-  background: rgb(216,216,220);
+  background: #E8E4D4;
 }
 .box.info{
   background: rgb(236,236,250);
@@ -434,7 +435,7 @@ a.danger:active{
   margin-bottom: 2em;
 }
 .tab-container{
-  background: #ECECEF;
+  background: #B0B9C8;
   padding-left:0.25rem;
   margin-bottom: 0.5rem;
   margin-top:-0.75rem;
