--- a/www/style.css
+++ b/www/style.css
@@ -138,7 +138,7 @@ form select{
   color: #447;
 }
 .map .container{
-  padding: 1rem 0 0;
+  padding: .5rem .5rem 0 .5rem;
 }
 /*
 .map .container{
@@ -328,13 +328,14 @@ a.ignore{
   box-shadow: 0 0 0 5px grey;
 }
 a.danger{
-  color: red;
-  box-shadow: 0 0 0 1px red;
+  color: #F68C0D;
+  box-shadow: 0 0 0 1px #F68C0D;
   background: rgba(230,0,0,0.05);
 }
 a.danger:active{
-  background: rgb(255,0,0);
-  box-shadow: 0 0 0 5px red;
+  color: #fff;
+  background: #F68C0D;
+  box-shadow: 0 0 0 5px #F68C0D;
 }
 #sorter{
   text-align: center;
@@ -417,7 +418,7 @@ a.danger:active{
 .car-label p b{
   display: block;
   height: 100%;
-  background: #7d7;
+  background: #227A78;
 }
 .input-inline{
   width: 4.5rem;
